bk_ida/gccida/c2/gen_rtvec
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1204:18: error: expected expression
v19 = *( _OWORD *)&v2[v17 * 2 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1204:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&v2[v17 * 2 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1206:12: error: expected expression
*( _OWORD *)result[v17 + 1].elem = v19; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1206:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v17 + 1].elem = v19; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1207:18: error: expected expression
v20 = *( _OWORD *)&v2[v17 * 2 + 6]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1207:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v2[v17 * 2 + 6]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1209:12: error: expected expression
*( _OWORD *)result[v17 + 3].elem = v20; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1209:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v17 + 3].elem = v20; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1210:18: error: expected expression
v21 = *( _OWORD *)&v2[v17 * 2 + 10]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1210:10: error: use of undeclared identifier '_OWORD'
v21 = *( _OWORD *)&v2[v17 * 2 + 10]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1212:12: error: expected expression
*( _OWORD *)result[v17 + 5].elem = v21; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1212:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v17 + 5].elem = v21; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1213:18: error: expected expression
v22 = *( _OWORD *)&v2[v17 * 2 + 14]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1213:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v2[v17 * 2 + 14]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1215:12: error: expected expression
*( _OWORD *)result[v17 + 7].elem = v22; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1215:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v17 + 7].elem = v22; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1231:18: error: expected expression
v25 = *( _OWORD *)&v2[v23 / 8 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1231:10: error: use of undeclared identifier '_OWORD'
v25 = *( _OWORD *)&v2[v23 / 8 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/emit-rtl.c:1233:12: error: expected expression
*( _OWORD *)&result[1].elem[v23 / 8] = v25; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_rtvec/src/obj/emit-rtl.o] Error 1
